--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>project</name>
 	<description>Demo project for Spring Boot</description>
-	<properties>
-		<java.version>21</java.version>
-		<spring-cloud-gcp.version>6.1.1</spring-cloud-gcp.version>
-	</properties>
+    <properties>
+        <java.version>21</java.version>
+        <spring-cloud-gcp.version>6.1.1</spring-cloud-gcp.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
 
 	<dependencies>
 		<dependency>
