--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=project
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/swiftshare
+spring.datasource.url=jdbc:mysql://root:DsTDaOpSLioOSLXbKjFMDUBNXEuYfkYE@yamanote.proxy.rlwy.net:47666/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=DsTDaOpSLioOSLXbKjFMDUBNXEuYfkYE
 
 server.address=0.0.0.0
 
