--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,34 @@
 spring.application.name=project
 
-
-spring.datasource.url=jdbc:mysql://root:AeVZalDfGWnQTbVGgeWXjugAtDisJazW@interchange.proxy.rlwy.net:27695/railway
+# ===============================
+# Database Configuration (MySQL)
+# ===============================
+spring.datasource.url=jdbc:mysql://db:3306/filesharingsystem
 spring.datasource.username=root
-spring.datasource.password=AeVZalDfGWnQTbVGgeWXjugAtDisJazW
-
-server.address=0.0.0.0
-
+spring.datasource.password=Deepunithya@023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Connection Pool (HikariCP)
 spring.datasource.hikari.maximum-pool-size=20
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+# ===============================
+# JPA / Hibernate Settings
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.servlet.multipart.enabled = true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# ===============================
+# File Upload Settings
+# ===============================
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=512MB
-spring.servlet.multipart.max-request-size = 512MB
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.servlet.multipart.max-request-size=512MB
+
+# ===============================
+# Server Settings
+# ===============================
+server.address=0.0.0.0
+server.port=8080
