--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,20 @@
 spring.application.name=project
 
-# ===============================
-# Database Configuration (MySQL)
-# ===============================
 spring.datasource.url=jdbc:mysql://db:3306/filesharingsystem
 spring.datasource.username=root
-spring.datasource.password=Deepunithya@023
+spring.datasource.password=Harsha@2005
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Connection Pool (HikariCP)
 spring.datasource.hikari.maximum-pool-size=20
 
-# ===============================
-# JPA / Hibernate Settings
-# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# ===============================
-# File Upload Settings
-# ===============================
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=512MB
 spring.servlet.multipart.max-request-size=512MB
 
-# ===============================
-# Server Settings
-# ===============================
 server.address=0.0.0.0
-server.port=8080
+server.port=8085
